<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="389dp"
        android:layout_height="262dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="364dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="129dp"
                android:layout_height="83dp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="326dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="43dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/XWins"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_s_wins"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/xNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_01"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/OWins"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/o_s_wins"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/oNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_02"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Ties"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ties"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tieNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_03"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center"
            android:text="@string/reset_scores" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/new_game" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newMove"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/move"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/XOMove"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>